PROJECT(TINYXML)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ./)

ADD_DEFINITIONS(-g -W -Wno-deprecated -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DTIXML_USE_STL)

INCLUDE_DIRECTORIES(
./  
/usr/local/include
)
LINK_DIRECTORIES(
./ 
/usr/local/lib 
)
ADD_LIBRARY(tinyxml STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(tinyxml)
